feat: теперь объекты имеют позицию на Audio сцене.

--- a/Assets/WebGLTemplates/UniHowl/index.html
+++ b/Assets/WebGLTemplates/UniHowl/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script type="text/javascript" src="./UniHowlJs/howler.min.js"></script>
+    <script type="text/javascript" src="./UniHowlJs/howler.spatial.min.js"></script>
     <script type="text/javascript" src="./UniHowlJs/WebAudio.js"></script>
   </head>
   <body class="{{{ SPLASH_SCREEN_STYLE.toLowerCase() }}}">
